--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="menu2" id="menu2-js"></div>
       <div class="menu3" id="menu3-js"></div>
     </div>
-    <div class="text-box" id="text-box-js">Games:<br>I will make the Asteroids game on this site.<br><br>I code in C++, JavaScript, C# and Python.<br><br>I have a Facebook group called: 'Gratis Computer Hjælp' - so be a member if you want to contact me.<br>I am the Administrator on that group.
+    <div class="text-box" id="text-box-js">Games:<br>Click here to start Asteroids game.<a href="asteroids.html">Game</a><br><br>I code in C++, JavaScript, C# and Python.<br><br>I have a Facebook group called: 'Gratis Computer Hjælp' - so be a member if you want to contact me.<br>I am the Administrator on that group.
     </div>
     <div class="text-box2" id="text-box2-js">Just contact me, and we can make a price together.<br>It doesn't have to be high in price. It depends on what the website is able to do.<br><br>
       Contact me on<br>"Gratis Computer Hjælp"...</div>
