--- a/asteroids.html
+++ b/asteroids.html
@@ -11,7 +11,7 @@
     <canvas width="800" height="600" id="canvas-js" color="0x000000"></canvas>     
     <!--<canvas width="400" height="300" id="canvas-js" color="0x000000"></canvas>-->
     <div id="button-container">
-      <button id="left-button.js" width="30px" height="30px">Left</button>
+      <button id="left-button.js"><a><img src="img/transButtonLeft.png" width="50px"></a></button>
       <button id="up-button.js">Up</button>
       <button id="right-button.js">Right</button>
       <button id="down-button.js">Down</button>
